--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,5 +1,7 @@
-<h2 class="text-center">Admin Orders Index Page</h2>
+<div class="container">
 
+<h2 class="text-center">Admin Orders Index Page</h2>
+<br>
 {{#if orders.length }}
   <table class="table">
     <thead>
@@ -40,3 +42,4 @@
 {{else }}
   <p class="text-danger">No orders</p>
 {{/if }}
+</div>
