--- a/views/admin/show.handlebars
+++ b/views/admin/show.handlebars
@@ -10,60 +10,131 @@
     </div>
     <!-- STUFF ON THE RIGHT -->
             <div class="row cart-body">
-                <form class="form-horizontal" method="POST" action="/cart/charges">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
-                    <!--REVIEW ORDER-->
+                    <!--CUSTOMER INFO-->
                     <div class="panel panel-info">
                         <div class="panel-heading">
-                            Review Order <div class="pull-right"><small><a class="afix-1" href="#">Edit Cart</a></small></div>
+                           Customer Info <div class="pull-right"></div>
                         </div>
                         <div class="panel-body">
 
-                          {{#each cartProducts as |product|}}
-                            <div class="form-group">
-                                <div class="col-sm-3 col-xs-3">
-                                    <img class="img-responsive" src="/images/{{product.photo}}" />
-                                </div>
-                                <div class="col-sm-6 col-xs-6">
-                                    <div class="col-xs-12">{{product.name}}</div>
-                                    <div class="col-xs-12"><small>Quantity:<span>{{product.quantity}}</span></small></div>
-                                </div>
-                                <div class="col-sm-3 col-xs-3 text-right">
-                                    <h6><span>$</span>{{subtotal product}}</h6>
-                                </div>
-                            </div>
-                            <div class="form-group"><hr /></div>
-                            {{/each}}
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                <th>Field</th>
+                                <th>Value</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                  <td>
+                                     First Name
+                                  </td>
+                                  <td>
+                                    {{ order.firstName }}</a>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Last Name
+                                  </td>
+                                  <td>
+                                    {{ order.lastName}}
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Email
+                                  </td>
+                                  <td>
+                                    {{ order.email }}
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Street
+                                </td>
+                                <td>
+                                  {{order.street}}
+                                </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    City
+                                </td>
+                                <td>
+                                  {{order.city}}
+                                </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    State
+                                </td>
+                                <td>
+                                  {{order.state}}
+                                </td>
+                                </tr>
 
-                            <div class="form-group"><hr /></div>
-                            <div class="form-group">
-                                <div class="col-xs-12">
-                                    <strong>Order Total</strong>
-                                    <div class="pull-right"><span>$</span><span>{{total}}</span></div>
-                                </div>
-                            </div>
+                            </tbody>
+                          </table>
 
                         </div>
+                      </div>
+
+
+                    <!--CUSTOMER INFO END-->
+                    <!-- ORDER INFO -->
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                           Order Info <div class="pull-right"></div>
                         </div>
+                        <div class="panel-body">
 
-                        <!-- <form > -->
-                          <input type="hidden" value="{{total}}" name="amount">
-                        <script
-                          src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                          data-key="{{ STRIPE_PK }}"
-                          data-amount=
-                          data-name="Stripe Node Test"
-                          data-description="Widget"
-                          data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-                          data-locale="auto"></script>
-                      <!-- </form> -->
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                <th>Field</th>
+                                <th>Value</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                  <td>
+                                     Checkout Date
+                                  </td>
+                                  <td>
+                                    {{ order.createdAt }}</a>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Stripe Token
+                                  </td>
+                                  <td>
+                                    {{ order.stripeToken}}
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Card Type
+                                  </td>
+                                  <td>
+                                    {{ order.stripeTokenType }}
+                                  </td>
+                                </tr>
 
-                    <!--REVIEW ORDER END-->
+                            </tbody>
+                          </table>
+
+                        </div>
+                      </div>
+                     <!--  ORDER INFO END -->
                 </div>
 
-<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
                 <!-- STUFF on the LEFT -->
-                {{#each cartProduct as |product| }}
+  
+                {{#each cartProducts as |product| }}
                   <table class="table">
                     <thead>
                       <tr>
@@ -129,9 +200,9 @@
 
                     </div>
 
-                </div>
-              </form>
-          </div>
+              
+
         <div class="row cart-footer">
       </div>
-    </div>
+
+  </div>
