--- a/views/analytics/index.handlebars
+++ b/views/analytics/index.handlebars
@@ -25,7 +25,7 @@
                          Total Revenue
                       </td>
                       <td>
-                        {{ order.firstName }}</a>
+                        {{ totals.totalRevenue}}</a>
                       </td>
                     </tr>
                     <tr>
@@ -33,7 +33,7 @@
                         Total Units Sold
                       </td>
                       <td>
-                        {{ order.lastName}}
+                        {{ totals.totalUnitsEver}}
                       </td>
                     </tr>
                     <tr>
@@ -41,7 +41,7 @@
                         Total Transactions
                       </td>
                       <td>
-                        {{ order.email }}
+                        {{ totals.totalTransactions }}
                       </td>
                     </tr>
                     <tr>
@@ -49,7 +49,7 @@
                         Total Customers
                     </td>
                     <td>
-                      {{order.street}}
+                      {{totals.totalUsers}}
                     </td>
                     </tr>
                     <tr>
@@ -57,7 +57,7 @@
                         Total Products
                     </td>
                     <td>
-                      {{order.city}}
+                      {{totals.totalProducts}}
                     </td>
                     </tr>
                     <tr>
@@ -65,7 +65,7 @@
                         Total Categories
                     </td>
                     <td>
-                      {{order.state}}
+                      {{totals.totalCategories}}
                     </td>
                     </tr>
                     <tr>
@@ -73,7 +73,7 @@
                       Total States Sold To
                   </td>
                   <td>
-                    {{order.state}}
+                    {{totals.totalStates}}
                   </td>
                   </tr>
 
