--- a/views/analytics/index.handlebars
+++ b/views/analytics/index.handlebars
@@ -5,85 +5,189 @@
 
 <div class="row cart-body">
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
-        <!--TOTALS-->
-        <div class="panel panel-info">
-            <div class="panel-heading">
-               Totals <div class="pull-right"></div>
-            </div>
-            <div class="panel-body">
 
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Field</th>
-                    <th>Value</th>
-                  </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                      <td>
-                         Total Revenue
-                      </td>
-                      <td>
-                        {{ totals.totalRevenue}}</a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Total Units Sold
-                      </td>
-                      <td>
-                        {{ totals.totalUnitsEver}}
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Total Transactions
-                      </td>
-                      <td>
-                        {{ totals.totalTransactions }}
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Total Customers
-                    </td>
-                    <td>
-                      {{totals.totalUsers}}
-                    </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Total Products
-                    </td>
-                    <td>
-                      {{totals.totalProducts}}
-                    </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        Total Categories
-                    </td>
-                    <td>
-                      {{totals.totalCategories}}
-                    </td>
-                    </tr>
-                    <tr>
-                    <td>
-                      Total States Sold To
-                  </td>
-                  <td>
-                    {{totals.totalStates}}
-                  </td>
-                  </tr>
+    </div>
 
-                </tbody>
-              </table>
-
-            </div>
+<div class="container wrapper">
+  <div class="row cart-head">
+    <div class="container">
+      <div class="row">
+        </div>
+          <div class="row">
+            <p></p>
           </div>
+        </div>
+    </div>
+    <!-- STUFF ON THE RIGHT -->
+            <div class="row cart-body">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
+                    <!--CUSTOMER INFO-->
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                           Revenue by State <div class="pull-right"></div>
+                        </div>
+                        <div class="panel-body">
+
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                <th>Field</th>
+                                <th>Value</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              {{#each totals.totalStatesRevenue as |state|}}
+                                <tr>
+                                  <td>
+                                     {{state._id}}
+                                  </td>
+                                  <td>
+                                    {{ state.revenueForState }}</a>
+                                  </td>
+                                </tr>
+                                {{/each}}
+                            </tbody>
+                          </table>
+
+                        </div>
+                      </div>
+
+
+                    <!--CUSTOMER INFO END-->
+                    <!-- ORDER INFO -->
+                    <div class="panel panel-info">
+                        <div class="panel-heading">
+                           Order Info <div class="pull-right"></div>
+                        </div>
+                        <div class="panel-body">
+
+                          <table class="table">
+                            <thead>
+                              <tr>
+                                <th>Field</th>
+                                <th>Value</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                  <td>
+                                     Checkout Date
+                                  </td>
+                                  <td>
+                                    {{ order.createdAt }}</a>
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Stripe Token
+                                  </td>
+                                  <td>
+                                    {{ order.stripeToken}}
+                                  </td>
+                                </tr>
+                                <tr>
+                                  <td>
+                                    Card Type
+                                  </td>
+                                  <td>
+                                    {{ order.stripeTokenType }}
+                                  </td>
+                                </tr>
+
+                            </tbody>
+                          </table>
+
+                        </div>
+                      </div>
+                     <!--  ORDER INFO END -->
+                </div>
+
+              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-pull-6 col-sm-pull-6">
+                <!-- STUFF on the LEFT -->
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                       Totals <div class="pull-right"></div>
+                    </div>
+                    <div class="panel-body">
+
+                      <table class="table">
+                        <thead>
+                          <tr>
+                            <th>Field</th>
+                            <th>Value</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                              <td>
+                                 Total Revenue
+                              </td>
+                              <td>
+                                {{ totals.totalRevenue}}</a>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                Total Units Sold
+                              </td>
+                              <td>
+                                {{ totals.totalUnitsEver}}
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                Total Transactions
+                              </td>
+                              <td>
+                                {{ totals.totalTransactions }}
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                Total Customers
+                            </td>
+                            <td>
+                              {{totals.totalUsers}}
+                            </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                Total Products
+                            </td>
+                            <td>
+                              {{totals.totalProducts}}
+                            </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                Total Categories
+                            </td>
+                            <td>
+                              {{totals.totalCategories}}
+                            </td>
+                            </tr>
+                            <tr>
+                            <td>
+                              Total States Sold To
+                          </td>
+                          <td>
+                            {{totals.totalStates}}
+                          </td>
+                          </tr>
+
+                        </tbody>
+                      </table>
+
+                    </div>
+                  </div>
+
+              </div>
+
+                    </div>
 
 
 
+        <div class="row cart-footer">
+      </div>
 
-</div>
+  </div>
